--- a/public/assets/scss/_variable.scss
+++ b/public/assets/scss/_variable.scss
@@ -11,8 +11,8 @@ $color_cararra_60: rgba(236, 236, 236, 0.6);
 $color_cararra_11: rgba(236, 236, 236, 0.11);
 $color_bon_jour: rgba(224, 224, 224, 1);
 $color_twilight_blue: #f3fffd;
-$color_tundora: #444444;
-$color_tapa: #777777;
+$color_tundora: #000000;
+$color_tapa: #000000;
 $color_black_haze: #f7f7f7;
 $color_mountain_mist: #999;
 $color_mine_shaft: #333;
@@ -27,15 +27,15 @@ $color_silver_chalice_25: rgba(170, 170, 170, 0.25);
 $color_silver_chalice_15: rgba(170, 170, 170, 0.15);
 $color_silver_chalice: #aaaaaa;
 
-$color_bright_turquoise: #18e7d3;
-$color_scooter: #19d0de;
+$color_bright_turquoise: #d84b0a;
+$color_scooter: rgb(243, 81, 7);
 $color_turquoise: #2bd4df;
 $color_cyan_aqua: #21edff;
 $color_picton_blue: #2cc6ff;
 
 $color_spring_green: #20f98a;
 $color_caribbean_green: #11d89c;
-$color_turquoise_blue: #59f7df;
+$color_turquoise_blue: #d84b0a;
 
 $color_charlotte: #b3f9fb;
 $color_java: #14bdb4;
